--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🔥 INSANE TEEN HUSTLE HUB 🔥</title>
+    <title>MoneyMethods</title>
+        <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/10384/10384161.png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Press+Start+2P&display=swap');
         
