--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     
     <div class="container">
         <header>
-            <h1 data-animate="fadeIn">💰 INSANE TEEN HUSTLE HUB 💰</h1>
+            <h1 data-animate="fadeIn">💰 Money Methods 💰</h1>
             <div class="subtitle" data-animate="slideLeft">$1K/DAY EDITION • TOP SECRET METHODS • 100% LEGAL</div>
         </header>
         
